--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.nameditemdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.nameditemdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemData:interface'
-    summary: <span data-ttu-id="4a424-101">描述通过调用返回的数据的接口`namedItem.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4a424-101">An interface describing the data returned by calling `namedItem.toJSON()`</span></span><!-- --><span data-ttu-id="4a424-102">.</span><span class="sxs-lookup"><span data-stu-id="4a424-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`namedItem.toJSON()`<!-- -->.
     name: Excel.Interfaces.NamedItemData
     fullName: Excel.Interfaces.NamedItemData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.NamedItemData#visible:member'
   - uid: 'excel!Excel.Interfaces.NamedItemData#comment:member'
     summary: |-
-      <span data-ttu-id="4a424-103">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="4a424-103">Represents the comment associated with this name.</span></span>
+      指定与此名称关联的注释。
 
-      <span data-ttu-id="4a424-104">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4a424-104">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
     fullName: comment
     langs:
@@ -32,9 +32,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemData#name:member'
     summary: |-
-      <span data-ttu-id="4a424-105">对象的名称。</span><span class="sxs-lookup"><span data-stu-id="4a424-105">The name of the object.</span></span> <span data-ttu-id="4a424-106">只读。</span><span class="sxs-lookup"><span data-stu-id="4a424-106">Read-only.</span></span>
+      对象的名称。
 
-      <span data-ttu-id="4a424-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4a424-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -47,9 +47,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemData#scope:member'
     summary: |-
-      <span data-ttu-id="4a424-108">指明是否将 name 限定到工作簿或特定工作表。</span><span class="sxs-lookup"><span data-stu-id="4a424-108">Indicates whether the name is scoped to the workbook or to a specific worksheet.</span></span> <span data-ttu-id="4a424-109">可能的值为：工作表、工作簿。</span><span class="sxs-lookup"><span data-stu-id="4a424-109">Possible values are: Worksheet, Workbook.</span></span> <span data-ttu-id="4a424-110">只读。</span><span class="sxs-lookup"><span data-stu-id="4a424-110">Read-only.</span></span>
+      指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
 
-      <span data-ttu-id="4a424-111">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4a424-111">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
     fullName: scope
     langs:
@@ -62,9 +62,9 @@ items:
           - 'excel!Excel.Interfaces.NamedItemData#scope~0:complex'
   - uid: 'excel!Excel.Interfaces.NamedItemData#type:member'
     summary: |-
-      <span data-ttu-id="4a424-112">指明 name 公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="4a424-112">Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="4a424-113">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="4a424-113">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="4a424-114">只读。</span><span class="sxs-lookup"><span data-stu-id="4a424-114">Read-only.</span></span>
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      <span data-ttu-id="4a424-115">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4a424-115">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -77,9 +77,9 @@ items:
           - 'excel!Excel.Interfaces.NamedItemData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.NamedItemData#value:member'
     summary: |-
-      <span data-ttu-id="4a424-116">表示 name 公式计算出的值。</span><span class="sxs-lookup"><span data-stu-id="4a424-116">Represents the value computed by the name's formula.</span></span> <span data-ttu-id="4a424-117">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="4a424-117">For a named range, will return the range address.</span></span> <span data-ttu-id="4a424-118">只读。</span><span class="sxs-lookup"><span data-stu-id="4a424-118">Read-only.</span></span>
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
-      <span data-ttu-id="4a424-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4a424-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -92,9 +92,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.NamedItemData#visible:member'
     summary: |-
-      <span data-ttu-id="4a424-120">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="4a424-120">Specifies whether the object is visible or not.</span></span>
+      指定对象是否可见。
 
-      <span data-ttu-id="4a424-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4a424-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
