--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.nameditemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.nameditemupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData:interface'
-    summary: '<span data-ttu-id="a6e6e-101">一个用于更新 NamedItem 对象上的数据的接口，可用于`namedItem.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="a6e6e-101">An interface for updating data on the NamedItem object, for use in `namedItem.set({ ... })`</span></span><!-- --><span data-ttu-id="a6e6e-102">.</span><span class="sxs-lookup"><span data-stu-id="a6e6e-102"></span></span>'
+    summary: '一个用于更新 NamedItem 对象上的数据的接口，可用于`namedItem.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.NamedItemUpdateData
     fullName: Excel.Interfaces.NamedItemUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#comment:member'
     summary: |-
-      <span data-ttu-id="a6e6e-103">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="a6e6e-103">Represents the comment associated with this name.</span></span>
+      指定与此名称关联的注释。
 
-      <span data-ttu-id="a6e6e-104">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6e6e-104">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
     fullName: comment
     langs:
@@ -28,9 +28,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="a6e6e-105">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="a6e6e-105">Specifies whether the object is visible or not.</span></span>
+      指定对象是否可见。
 
-      <span data-ttu-id="a6e6e-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6e6e-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
