--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charterrorbarsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charterrorbarsupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData:interface'
-    summary: '<span data-ttu-id="35006-101">一个用于更新 ChartErrorBars 对象上的数据的接口，可用于`chartErrorBars.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="35006-101">An interface for updating data on the ChartErrorBars object, for use in `chartErrorBars.set({ ... })`</span></span><!-- --><span data-ttu-id="35006-102">.</span><span class="sxs-lookup"><span data-stu-id="35006-102"></span></span>'
+    summary: '一个用于更新 ChartErrorBars 对象上的数据的接口，可用于`chartErrorBars.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartErrorBarsUpdateData
     fullName: Excel.Interfaces.ChartErrorBarsUpdateData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#endStyleCap:member'
     summary: |-
-      <span data-ttu-id="35006-103">指定误差线是否具有终止端样式。</span><span class="sxs-lookup"><span data-stu-id="35006-103">Specifies whether or not the error bars have an end style cap.</span></span>
+      指定误差线是否具有最终样式帽。
 
-      <span data-ttu-id="35006-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35006-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endStyleCap
     fullName: endStyleCap
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="35006-105">指定误差线的格式类型。</span><span class="sxs-lookup"><span data-stu-id="35006-105">Specifies the formatting type of the error bars.</span></span>
+      指定误差线的格式类型。
 
-      <span data-ttu-id="35006-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35006-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -46,9 +46,9 @@ items:
           - 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include:member'
     summary: |-
-      <span data-ttu-id="35006-107">指定包含误差线的哪些部分。</span><span class="sxs-lookup"><span data-stu-id="35006-107">Specifies which parts of the error bars to include.</span></span>
+      指定包含误差线的哪些部分。
 
-      <span data-ttu-id="35006-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35006-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: include
     fullName: include
     langs:
@@ -61,9 +61,9 @@ items:
           - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type:member'
     summary: |-
-      <span data-ttu-id="35006-109">误差线标记的区域类型。</span><span class="sxs-lookup"><span data-stu-id="35006-109">The type of range marked by the error bars.</span></span>
+      误差线标记的区域类型。
 
-      <span data-ttu-id="35006-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35006-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -76,9 +76,9 @@ items:
           - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="35006-111">指定是否显示误差线。</span><span class="sxs-lookup"><span data-stu-id="35006-111">Specifies whether or not the error bars are displayed.</span></span>
+      指定是否显示误差线。
 
-      <span data-ttu-id="35006-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35006-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
