--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartmapoptionsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartmapoptionsloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="d46df-101">封装区域映射图的属性。</span><span class="sxs-lookup"><span data-stu-id="d46df-101">Encapsulates the properties for a region map chart.</span></span>
+      封装区域映射图的属性。
 
-      <span data-ttu-id="d46df-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d46df-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartMapOptionsLoadOptions
     fullName: Excel.Interfaces.ChartMapOptionsLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.ChartMapOptionsLoadOptions#level:member'
       - 'excel!Excel.Interfaces.ChartMapOptionsLoadOptions#projectionType:member'
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsLoadOptions#$all:member'
-    summary: '<span data-ttu-id="d46df-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="d46df-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="d46df-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="d46df-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="d46df-105">).</span><span class="sxs-lookup"><span data-stu-id="d46df-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsLoadOptions#labelStrategy:member'
     summary: |-
-      <span data-ttu-id="d46df-106">返回或设置区域地图图表的系列地图标签策略。</span><span class="sxs-lookup"><span data-stu-id="d46df-106">Returns or sets the series map labels strategy of a region map chart.</span></span> <span data-ttu-id="d46df-107">读/写。</span><span class="sxs-lookup"><span data-stu-id="d46df-107">Read/Write.</span></span>
+      指定区域地图图表的系列地图标签策略。
 
-      <span data-ttu-id="d46df-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d46df-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: labelStrategy
     fullName: labelStrategy
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsLoadOptions#level:member'
     summary: |-
-      <span data-ttu-id="d46df-109">返回或设置区域地图图表的系列映射级别。</span><span class="sxs-lookup"><span data-stu-id="d46df-109">Returns or sets the series mapping level of a region map chart.</span></span> <span data-ttu-id="d46df-110">读/写。</span><span class="sxs-lookup"><span data-stu-id="d46df-110">Read/Write.</span></span>
+      指定区域映射图表的系列映射级别。
 
-      <span data-ttu-id="d46df-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d46df-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: level
     fullName: level
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsLoadOptions#projectionType:member'
     summary: |-
-      <span data-ttu-id="d46df-112">返回或设置区域地图图表的系列投影类型。</span><span class="sxs-lookup"><span data-stu-id="d46df-112">Returns or sets the series projection type of a region map chart.</span></span> <span data-ttu-id="d46df-113">读/写。</span><span class="sxs-lookup"><span data-stu-id="d46df-113">Read/Write.</span></span>
+      指定区域地图图表的系列投影类型。
 
-      <span data-ttu-id="d46df-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d46df-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: projectionType
     fullName: projectionType
     langs:
