--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.headerfooterdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.headerfooterdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.HeaderFooterData:interface'
-    summary: <span data-ttu-id="819ad-101">描述通过调用返回的数据的接口`headerFooter.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="819ad-101">An interface describing the data returned by calling `headerFooter.toJSON()`</span></span><!-- --><span data-ttu-id="819ad-102">.</span><span class="sxs-lookup"><span data-stu-id="819ad-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`headerFooter.toJSON()`<!-- -->.
     name: Excel.Interfaces.HeaderFooterData
     fullName: Excel.Interfaces.HeaderFooterData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.HeaderFooterData#rightHeader:member'
   - uid: 'excel!Excel.Interfaces.HeaderFooterData#centerFooter:member'
     summary: |-
-      <span data-ttu-id="819ad-103">获取或设置工作表的中心页脚。</span><span class="sxs-lookup"><span data-stu-id="819ad-103">Gets or sets the center footer of the worksheet.</span></span> <span data-ttu-id="819ad-104">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="819ad-104">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="819ad-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="819ad-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerFooter
     fullName: centerFooter
     langs:
@@ -32,9 +32,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterData#centerHeader:member'
     summary: |-
-      <span data-ttu-id="819ad-106">获取或设置工作表的中心页眉。</span><span class="sxs-lookup"><span data-stu-id="819ad-106">Gets or sets the center header of the worksheet.</span></span> <span data-ttu-id="819ad-107">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="819ad-107">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="819ad-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="819ad-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerHeader
     fullName: centerHeader
     langs:
@@ -47,9 +47,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterData#leftFooter:member'
     summary: |-
-      <span data-ttu-id="819ad-109">获取或设置工作表的左侧页脚。</span><span class="sxs-lookup"><span data-stu-id="819ad-109">Gets or sets the left footer of the worksheet.</span></span> <span data-ttu-id="819ad-110">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="819ad-110">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="819ad-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="819ad-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftFooter
     fullName: leftFooter
     langs:
@@ -62,9 +62,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterData#leftHeader:member'
     summary: |-
-      <span data-ttu-id="819ad-112">获取或设置工作表的左侧页眉。</span><span class="sxs-lookup"><span data-stu-id="819ad-112">Gets or sets the left header of the worksheet.</span></span> <span data-ttu-id="819ad-113">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="819ad-113">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="819ad-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="819ad-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftHeader
     fullName: leftHeader
     langs:
@@ -77,9 +77,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterData#rightFooter:member'
     summary: |-
-      <span data-ttu-id="819ad-115">获取或设置工作表的右侧页脚。</span><span class="sxs-lookup"><span data-stu-id="819ad-115">Gets or sets the right footer of the worksheet.</span></span> <span data-ttu-id="819ad-116">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="819ad-116">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="819ad-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="819ad-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightFooter
     fullName: rightFooter
     langs:
@@ -92,9 +92,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterData#rightHeader:member'
     summary: |-
-      <span data-ttu-id="819ad-118">获取或设置工作表的右侧页眉。</span><span class="sxs-lookup"><span data-stu-id="819ad-118">Gets or sets the right header of the worksheet.</span></span> <span data-ttu-id="819ad-119">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="819ad-119">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="819ad-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="819ad-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightHeader
     fullName: rightHeader
     langs:
