--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.headerfootergroupdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.headerfootergroupdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData:interface'
-    summary: <span data-ttu-id="bf8ee-101">描述通过调用返回的数据的接口`headerFooterGroup.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="bf8ee-101">An interface describing the data returned by calling `headerFooterGroup.toJSON()`</span></span><!-- --><span data-ttu-id="bf8ee-102">.</span><span class="sxs-lookup"><span data-stu-id="bf8ee-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`headerFooterGroup.toJSON()`<!-- -->.
     name: Excel.Interfaces.HeaderFooterGroupData
     fullName: Excel.Interfaces.HeaderFooterGroupData
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.Interfaces.HeaderFooterGroupData#useSheetScale:member'
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#defaultForAllPages:member'
     summary: |-
-      <span data-ttu-id="bf8ee-103">常规页眉/页脚，除非指定偶数页/奇数页或首页，否则适用于所有页面，</span><span class="sxs-lookup"><span data-stu-id="bf8ee-103">The general header/footer, used for all pages unless even/odd or first page is specified.</span></span>
+      常规页眉/页脚，除非指定偶数页/奇数页或首页，否则适用于所有页面，
 
-      <span data-ttu-id="bf8ee-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bf8ee-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: defaultForAllPages
     fullName: defaultForAllPages
     langs:
@@ -33,9 +33,9 @@ items:
           - 'excel!Excel.Interfaces.HeaderFooterData:interface'
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#evenPages:member'
     summary: |-
-      <span data-ttu-id="bf8ee-105">用于偶数页的页眉/页脚，需要为奇数页指定奇数页页眉/页脚。</span><span class="sxs-lookup"><span data-stu-id="bf8ee-105">The header/footer to use for even pages, odd header/footer needs to be specified for odd pages.</span></span>
+      用于偶数页的页眉/页脚，需要为奇数页指定奇数页页眉/页脚。
 
-      <span data-ttu-id="bf8ee-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bf8ee-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: evenPages
     fullName: evenPages
     langs:
@@ -48,9 +48,9 @@ items:
           - 'excel!Excel.Interfaces.HeaderFooterData:interface'
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#firstPage:member'
     summary: |-
-      <span data-ttu-id="bf8ee-107">首页的页眉/页脚，为所有其他页使用常规或偶数页/奇数页页眉/页脚。</span><span class="sxs-lookup"><span data-stu-id="bf8ee-107">The first page header/footer, for all other pages general or even/odd is used.</span></span>
+      首页的页眉/页脚，为所有其他页使用常规或偶数页/奇数页页眉/页脚。
 
-      <span data-ttu-id="bf8ee-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bf8ee-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: firstPage
     fullName: firstPage
     langs:
@@ -63,9 +63,9 @@ items:
           - 'excel!Excel.Interfaces.HeaderFooterData:interface'
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#oddPages:member'
     summary: |-
-      <span data-ttu-id="bf8ee-109">用于奇数页的页眉/页脚，需要为偶数页指定偶数页页眉/页脚。</span><span class="sxs-lookup"><span data-stu-id="bf8ee-109">The header/footer to use for odd pages, even header/footer needs to be specified for even pages.</span></span>
+      用于奇数页的页眉/页脚，需要为偶数页指定偶数页页眉/页脚。
 
-      <span data-ttu-id="bf8ee-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bf8ee-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: oddPages
     fullName: oddPages
     langs:
@@ -78,9 +78,9 @@ items:
           - 'excel!Excel.Interfaces.HeaderFooterData:interface'
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#state:member'
     summary: |-
-      <span data-ttu-id="bf8ee-111">获取或设置所设置的页眉/页脚的状态。</span><span class="sxs-lookup"><span data-stu-id="bf8ee-111">Gets or sets the state of which headers/footers are set.</span></span> <span data-ttu-id="bf8ee-112">有关详细信息，请参阅 Excel.HeaderFooterState。</span><span class="sxs-lookup"><span data-stu-id="bf8ee-112">See Excel.HeaderFooterState for details.</span></span>
+      页眉/页脚的设置状态。 有关详细信息，请参阅 Excel.HeaderFooterState。
 
-      <span data-ttu-id="bf8ee-113">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bf8ee-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: state
     fullName: state
     langs:
@@ -93,9 +93,9 @@ items:
           - 'excel!Excel.Interfaces.HeaderFooterGroupData#state~0:complex'
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#useSheetMargins:member'
     summary: |-
-      <span data-ttu-id="bf8ee-114">获取或设置一个标记，指示页眉/页脚是否与工作表的页面布局选项中设置的页边距对齐。</span><span class="sxs-lookup"><span data-stu-id="bf8ee-114">Gets or sets a flag indicating if headers/footers are aligned with the page margins set in the page layout options for the worksheet.</span></span>
+      获取或设置一个标记，指示页眉/页脚是否与工作表的页面布局选项中设置的页边距对齐。
 
-      <span data-ttu-id="bf8ee-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bf8ee-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useSheetMargins
     fullName: useSheetMargins
     langs:
@@ -108,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#useSheetScale:member'
     summary: |-
-      <span data-ttu-id="bf8ee-116">获取或设置一个标记，指示是否应按照工作表的页面布局选项中设置的页面缩放百分比来缩放页眉/页脚。</span><span class="sxs-lookup"><span data-stu-id="bf8ee-116">Gets or sets a flag indicating if headers/footers should be scaled by the page percentage scale set in the page layout options for the worksheet.</span></span>
+      获取或设置一个标记，指示是否应按照工作表的页面布局选项中设置的页面缩放百分比来缩放页眉/页脚。
 
-      <span data-ttu-id="bf8ee-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bf8ee-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useSheetScale
     fullName: useSheetScale
     langs:
